processed/gerrit/txt_full/55417.txt
Change:     55417
Subject:    LU-17948 pcc: fix llapi_pcc_del() -Werror=enum-int-mismatch
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55417
Change-Id:  I2900b59a609410c6faab78d24f6176bc5c268e98
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-13 00:27:22.000000000
Updated:    2024-06-25 04:22:51.000000000
Patch Set:  3
Insertions: +3
Deletions:  -2
Comments:   1 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: Qian Yingjin: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Qian Yingjin

--- Commit Message ---
LU-17948 pcc: fix llapi_pcc_del() -Werror=enum-int-mismatch

gcc 13 does not allow mixing of enum and integer
types between function declaration and implementation.

This patch fixes the following build failures:
liblustreapi_pcc.c:755:5: error:
conflicting types for 'llapi_pcc_del' due to enum/integer mismatch;
have 'int(const char *, const char *, enum lu_pcc_cleanup_flags)'
[-Werror=enum-int-mismatch]
  755 | int llapi_pcc_del(const char *mntpath, const char *pccpath,
      |     ^~~~~~~~~~~~~

liblustreapi_pcc.c:790:5: error:
conflicting types for 'llapi_pcc_clear' due to enum/integer mismatch;
have 'int(const char *, enum lu_pcc_cleanup_flags)' [-Werror=enum-int-mismatch]
  790 | int llapi_pcc_clear(const char *mntpath, enum lu_pcc_cleanup_flags flags)
      |     ^~~~~~~~~~~~~~~

Test-Parameters: trivial testlist=sanity-pcc

Change-Id: I2900b59a609410c6faab78d24f6176bc5c268e98
Fixes: 0d7d9ae ("LU-17657 build: gcc 13 stricter enum checking")
Fixes: c74878c ("LU-12373 pcc: uncache the pcc copies when remove a PCC backend")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55417
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-13 00:27:22.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-13 00:28:34.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-06-13 00:30:46.000000000) ---
Patch Set 1:

(1 comment)

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/43373/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs

--- Message (Andreas Dilger, 2024-06-13 00:34:06.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2024-06-13 00:45:49.000000000) ---
Patch Set 1:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43373/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (jenkins, 2024-06-13 01:03:45.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105442/ : SUCCESS

--- Message (Maloo, 2024-06-13 01:04:25.000000000) ---
Patch Set 1:

The following sessions will be run for build 105442 patch 1

Enforced:
- review-ldiskfs-dne on el9.3-x86_64/ldiskfs servers and clients
- custom on el9.3-x86_64/ldiskfs servers and clients

Maloo Test Queue: https://testing.whamcloud.com/test_queue?jobs=lustre-reviews&builds=105442&commit=Apply+Filter
Maloo Results: https://testing.whamcloud.com/test_sessions/related?jobs=lustre-reviews&builds=105442#redirect

--- Message (Qian Yingjin, 2024-06-13 01:45:09.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Lustre Gerrit Janitor, 2024-06-13 03:50:22.000000000) ---
Patch Set 1:

Even though "Test-Parameters: trivial" was detected, this deeply suspicious bot still run some testing

Testing has completed with errors!

> conf-sanity3@ldiskfs+DNE Timeout(7009s)
> racer@ldiskfs+DNE Timeout(1009s)
> sanity2@zfs Timeout(10769s)

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/43373/results.html

--- Message (Maloo, 2024-06-13 06:49:47.000000000) ---
Patch Set 1: Verified+1

Passed enforced test review-ldiskfs-dne on RHEL 9.3/x86_64 uploaded by Onyx Autotest from onyx-46vm1: https://testing.whamcloud.com/test_sessions/6c3ef35b-61cf-4a7b-b7b6-841cde759079 ran 5 tests.

--- Message (Jian Yu, 2024-06-13 18:21:05.000000000) ---
Topic set to ubuntu2404

--- Message (Oleg Drokin, 2024-06-25 03:33:22.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (Oleg Drokin, 2024-06-25 03:33:30.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2024-06-25 03:33:33.000000000) ---
Change has been successfully cherry-picked as 5ef6f3459355e16fd27427e45ff417e93589c960 by Oleg Drokin

--- Message (jenkins, 2024-06-25 04:22:51.000000000) ---
Patch Set 2:

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105680/ : SUCCESS
